.archive/clusters/homelab-1/.network-policies/allow-egress-to-minio/source/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-minio
spec:
  podSelector:
    matchLabels:
      networking/allow-egress-to-minio: "true"
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: "storage"
          podSelector:
            matchLabels:
              app.kubernetes.io/name: "minio-app"
      ports:
        - protocol: TCP
          port: 9000
